<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fingerprint</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="input_password">Enter your passcode</string>
    <string name="input_old_password">Enter your old passcode</string>
    <string name="input_new_password">Enter your new passcode</string>
    <string name="input_new_password_again">Re-enter your new passcode</string>
    <string name="input_other_password">Enter a different passcode.Cannot re-use the same passcode</string>
    <string name="wrong_passworegister_titlerd">Failed Passcode Attempt</string>
    <string name="password_keyboard_1">1</string>
    <string name="password_keyboard_2">2</string>
    <string name="password_keyboard_3">3</string>
    <string name="password_keyboard_4">4</string>
    <string name="password_keyboard_5">5</string>
    <string name="password_keyboard_6">6</string>
    <string name="password_keyboard_7">7</string>
    <string name="password_keyboard_8">8</string>
    <string name="password_keyboard_9">9</string>
    <string name="password_keyboard_0">0</string>
    <string name="password_keyboard_c">&lt;-</string>
    <string name="password_not_equal_pre">Passcodes did not match,Try again</string>
    <string name="preferences_title_text">Fingerprint Passcode</string>
    <string name="preferences_need_password">Require Passcode</string>
    <string name="preferences_need_password_sub">Enter fingerprint setting need passcode</string>
    <string name="preferences_lockscreen_password">Lockscreen Passcode</string>
    <string name="preferences_lockscreen_password_sub">Unlock Screen need passcode</string>
    <string name="preferences_more">></string>
    <string name="input_password_title">Password</string>
    <string name="preferences_close_password">Turn Passcode Off</string>
    <string name="preferences_open_password">Turn Passcode On</string>
    <string name="touchid_add_new_fingerprint">Add a Fingerprint</string>
    <string name="capture_put_finger_on">Place Your Finger</string>
    <string name="capture_notice_put_on_screen">Lift and rest the %1$s of your finger repeatedly.</string>
    <string name="capture_notice_put_on_screen_outside">Lift and rest the %1$s of your finger repeatedly.</string>
    <string name="center_area">center area</string>
    <string name="outside_area">edge area</string>
    <string name="default_fingerprint_description">Default fingerprint description</string>
    <string name="title_activity_lockscreen">LockscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lock_screen_match_fingerpring"> Recognize</string>
    <string name="touch_id">Fingerprint manager</string>
    <string name="add_fingerprint">Add a Fingerprint.</string>
    <string name="password_change_password">Change Passcode</string>
    <string name="preferences_now">Immediately ></string>
    <string name="test_devices">Device</string>
    <string name="test_baudrate">Baudrate</string>
    <string name="preferences_on">Open</string>
    <string name="preferences_off">Close</string>
    <string name="serial_port_title">Baudrate</string>
    <string name="china_unicom">China unicom</string>
    <string name="china_mobile">China mobile</string>
    <string name="china_telecom">China telecom</string>
    <string name="china_unknown">unknown</string>
    <string name="china_nosim">No Sim</string>
    <string name="lock_screen_mismatch">Mismatching</string>
    <string name="lockscreen_click_unlock">Click screen</string>
    <string name="fingerprint_manager">Fingerprint manager</string>
    <string name="fingerprint_manager_sub">Register &amp; Manager</string>
    <string name="wrong_password">Wrong password</string>
    <string name="register_title">Register</string>
    <string name="register_touchhomekey">Place Your Finger</string>
    <string name="register_notice_content_one">Touch the center area to enroll your fingerprint.Make sure to cover valid area and that your finger is dry.</string>
    <string name="register_dialog_key_good">Ok</string>
    <string name="register_notice_the_hand">Lift Your Finger</string>
    <string name="register_register_failed">Failed</string>
    <string name="register_notice_title_keeptouch">Keep Finger on center area</string>
    <string name="register_notice_keeptouch">Don\'t lift until you feel a vibration.</string>
    <string name="register_change_catch_style">Adjust Your Grip</string>
    <string name="register_get_slide_fingerprint">Keep going to capture the edges of your print.</string>
    <string name="register_register_complete">Complete</string>
    <string name="register_complete_infomation">Touch ID is ready.Your print can be used for unlocking your Phone.</string>
    <string name="register_notice">Move Finger</string>
    <string name="register_notice_steady">Keep Finger Steady</string>
    <string name="register_notiece_steady_content">Keep Finger on the Home Button Until Asked to Lift</string>
    <string name="register_no_piece_together">Don\'t move your finger too much between scans.</string>
    <string name="register_no_move">Move your finger slightly between scans.</string>
    <string name="register_no_standby">Don\'t lift until you feel a vibration.</string>
    <string name="about_ok">Ok</string>
    <string name="about">About Fingerprint</string>
    <string name="register_continue">Continue</string>
    <string name="testapi_check_password">checkPWD</string>
    <string name="testapi_change_password">changePWD</string>
    <string name="testapi_query">query</string>
    <string name="testapi_register">register</string>
    <string name="testapi_cancel_register">CancelReg</string>
    <string name="testapi_recognize">Recognize</string>
    <string name="testapi_reservce">Reserve</string>
    <string name="testapi_get_info">GetInfo</string>
    <string name="testapi_permission">Permission</string>
    <string name="touchid_fp_lockscreen">Unlock Screen by Fingerprint</string>
    <string name="touchid_display_discription">Show Description</string>
    <string name="touchid_display_message">Show Message</string>
    <string name="touchid_name">>Nam.</string>
    <string name="touchid_discription">Des.</string>
    <string name="touchid_ok">OK</string>
    <string name="touchid_cancel">Cancel</string>
    <string name="touchid_delete">Delete</string>
    <string name="register_bad_images">Touch the center area to enroll your fingerprint.Make sure to cover the valid area and that your finger is dry.</string>
    <string name="Algorithm_version">Algorithm version:</string>
    <string name="application_version">Application version:</string>
    <string name="mode_version">Hardware version:</string>
    <string name="lockscreen_slide">Slide Unlock</string>
    <string name="lockscreen_back">Back</string>
    <string name="application_crash">Sorry,some exception occurs ,exit immdiately</string>
    <string name="addfinger_faied_toast">Add Fingerprint Failed.</string>
    
    <string name="algoresult_stategy">Strategy :%d</string>
    <string name="algoresult_img_qulity">Image quality : %1$s</string>
    <string name="algoresult_is_study">IfStudy : </string>
    <string name="algoresult_effective_area">Effective area ： %1$s</string>
    <string name="algoresult_is_stitch">IfStitch : %1$s</string>
    <string name="algoresult_is_delete">IfDelete : %1$s</string>
    <string name="algoresult_temp_count">Templet count :  %1$s</string>
    <string name="algoresult_register_percent">Enroll percent : </string>
    <string name="algoresult_overlay_ratio">Overlay ratio : %1$s</string>
    <string name="algoresult_overlay_index">overlay templet: %1$s</string>
    <string name="algoresult_register_time">Enroll time ： </string>
    <string name="algoresult_preoverlay_ratio">Preoverlay ratio :%1$s</string>
    <string name="timesmall_default">10:10</string>
    <string name="date_default">Mon,Feb 19th</string>
    <string name="time_default">23:59</string>
    <string name="register_duplicate">FingerPoint %1$s enrolled,please choose others</string>
    <string name="message_notice">Notice</string>
    <string name="verify_rate">matched rate: %1$d%%</string>
    
    <string name="control_camera">Camera Control</string>
    <string name="control_music">Music Control</string>
    <string name="control_keyguard">Lock Screen</string>
    <string name="finger_name">Fingerprint</string>
    <string name="finger_description">Description</string>
    <string name="set_keyguard_dialog_title">Notice</string>
    <string name="set_keyguard_dialog_message">You should set a safely lock screen before use finger</string>
    <string name="set_finger_dialog_title">Notice !</string>
    <string name="set_finger_dialog_msg">You should add a finger first</string>

    <string name="factory_success">SUCCESS</string>
</resources>
